set up swagger docs
